[package]
name = "libcwiid-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.137"

[build-dependencies]
cc = { version = "1.0.77", features = ["parallel"] }
pkg-config = "0.3.26"


[package.metadata.cross.build]
default-target = "armv5te-unknown-linux-gnueabi"

[package.metadata.cross.target.armv5te-unknown-linux-gnueabi]
image = "ghcr.io/cross-rs/armv5te-unknown-linux-gnueabi-cross:local"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 2
strip = true