[package]
name = "libcwiid-sys"
version = "0.1.13"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Rust bindings for cwiid (Wii remote \"Wiimote\" api bindings)"
repository = "https://github.com/RedIODev/Cwiid-rs"

[lib]
crate-type= ["rlib"]

[dependencies]
#libc = "0.1.0"

[build-dependencies]
cc = { version = "1.0.77" }#, features = ["parallel"]
#pkg-config = "0.3.26"

[package.metadata.cross.build]
default-target = "armv5te-unknown-linux-gnueabi"

[package.metadata.cross.target.armv5te-unknown-linux-gnueabi]
image = "ghcr.io/cross-rs/armv5te-unknown-linux-gnueabi-cross-bt:local"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 2
strip = true